# miden-base

./: .gitmodules  .taplo.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml  zizmor.yml
crates/miden-agglayer/: Cargo.toml  SPEC.md  build.rs
crates/miden-agglayer/asm/bridge/: agglayer_faucet.masm  asset_conversion.masm  bridge_config.masm  bridge_in.masm  bridge_out.masm  canonical_zeros.masm  crypto_utils.masm  eth_address.masm  mmr_frontier32_keccak.masm  utils.masm
crates/miden-agglayer/asm/components/: bridge.masm  faucet.masm
crates/miden-agglayer/asm/note_scripts/: B2AGG.masm  CLAIM.masm  CONFIG_AGG_BRIDGE.masm  UPDATE_GER.masm  b2agg.masm  claim.masm  config_agg_bridge.masm  update_ger.masm
crates/miden-agglayer/diagrams/: bridge-in.excalidraw  bridge-out.excalidraw  faucet-registration.excalidraw  ger-injection.excalidraw
crates/miden-agglayer/solidity-compat/: .gitignore  README.md  foundry.toml
crates/miden-agglayer/solidity-compat/test/: ClaimAssetTestVectors.t.sol  ClaimAssetTestVectorsLocalTx.t.sol  ClaimAssetTestVectorsMainnetTx.t.sol  ClaimAssetTestVectorsRealTx.t.sol  ClaimAssetTestVectorsRollupTx.t.sol  DepositContractTestHelpers.sol  ExitRoots.t.sol  LeafValueTestVectors.t.sol  MMRTestVectors.t.sol  MTFTestVectors.t.sol  SMTMerkleProofVectors.t.sol
crates/miden-agglayer/solidity-compat/test-vectors/: canonical_zeros.json  claim_asset_vectors_l1_tx.json  claim_asset_vectors_l2_tx.json  claim_asset_vectors_local_tx.json  claim_asset_vectors_real_tx.json  claim_asset_vectors_rollup_tx.json  exit_roots.json  leaf_value_vectors.json  merkle_proof_vectors.json  merkle_tree_frontier_vectors.json  mmr_frontier_vectors.json
crates/miden-agglayer/src/: b2agg_note.rs  bridge.rs  claim_note.rs  config_note.rs  faucet.rs  lib.rs  update_ger_note.rs  utils.rs
crates/miden-agglayer/src/errors/: agglayer.rs
crates/miden-agglayer/src/eth_types/: address.rs  amount.rs  eth_address.rs  eth_embedded_account_id.rs  global_index.rs  metadata_hash.rs  mod.rs
crates/miden-agglayer/src/testing/: mod.rs
crates/miden-block-prover/: Cargo.toml
crates/miden-block-prover/src/: local_block_prover.rs
crates/miden-protocol/: Cargo.toml  README.md  build.rs  masm_doc_comment_fmt.md
crates/miden-protocol/asm/protocol/: active_account.masm  active_note.masm  asset.masm  auth.masm  faucet.masm  input_note.masm  kernel_proc_offsets.masm  native_account.masm  note.masm  output_note.masm  tx.masm
crates/miden-protocol/asm/shared_modules/: account_id.masm  types.masm
crates/miden-protocol/benches/: account_seed.rs
crates/miden-protocol/src/: constants.rs  lib.rs
crates/miden-protocol/src/account/: access.rs  auth.rs  file.rs  header.rs  mod.rs  partial.rs
crates/miden-protocol/src/address/: address_id.rs  mod.rs  routing_parameters.rs
crates/miden-protocol/src/asset/: asset_callbacks.rs  asset_callbacks_flag.rs  fungible.rs  mod.rs  nonfungible.rs  token_symbol.rs
crates/miden-protocol/src/batch/: batch_id.rs  input_output_note_tracker.rs  note_tree.rs  ordered_batches.rs  proposed_batch.rs  proven_batch.rs
crates/miden-protocol/src/block/: block_account_update.rs  block_body.rs  block_inputs.rs  block_number.rs  block_proof.rs  blockchain.rs  header.rs  mod.rs  note_tree.rs  proposed_block.rs  proven_block.rs  signed_block.rs
crates/miden-protocol/src/errors/: mod.rs  protocol.rs  tx_kernel.rs
crates/miden-protocol/src/note/: assets.rs  attachment.rs  details.rs  file.rs  header.rs  location.rs  metadata.rs  mod.rs  note_id.rs  note_tag.rs  note_type.rs  nullifier.rs  partial.rs  recipient.rs  script.rs  storage.rs
crates/miden-protocol/src/testing/: account_code.rs  account_id.rs  add_component.rs  asset.rs  block.rs  block_note_tree.rs  component_metadata.rs  constants.rs  mod.rs  noop_auth_component.rs  note.rs  note_script_root.rs  random_secret_key.rs  storage.rs  storage_map_key.rs  tx.rs
crates/miden-protocol/src/transaction/: executed_tx.rs  executor.rs  mod.rs  ordered_transactions.rs  outputs.rs  partial_blockchain.rs  proven_tx.rs  transaction_id.rs  tx_args.rs  tx_header.rs  tx_summary.rs
crates/miden-protocol/src/utils/: mod.rs  strings.rs
crates/miden-standards/: Cargo.toml  build.rs
crates/miden-standards/src/: auth_method.rs  lib.rs  standards_lib.rs
crates/miden-standards/src/account/: mod.rs
crates/miden-standards/src/code_builder/: mod.rs
crates/miden-standards/src/errors/: mod.rs  standards.rs
crates/miden-standards/src/note/: burn.rs  execution_hint.rs  mint.rs  mod.rs  network_account_target.rs  network_note.rs  p2id.rs  p2ide.rs  pswap.rs  standard_note_attachment.rs  swap.rs
crates/miden-standards/src/testing/: mock_account.rs  mock_account_code.rs  mock_util_lib.rs  mod.rs  note.rs
crates/miden-standards/src/utils/: mod.rs  string.rs
crates/miden-testing/: Cargo.toml
crates/miden-testing/src/: asserts.rs  executor.rs  expected_error.rs  lib.rs  mock_host.rs  recording_host.rs  utils.rs
crates/miden-testing/src/asserts/: mod.rs  notes.rs
crates/miden-testing/src/mock_chain/: auth.rs  chain.rs  chain_builder.rs  note.rs
crates/miden-testing/src/standards/: mod.rs  network_account_target.rs  note_tag.rs  token_metadata.rs
crates/miden-testing/src/tx_context/: builder.rs  context.rs  errors.rs  mod.rs
crates/miden-testing/tests/: assertion_macros.rs  asserts.rs  lib.rs
crates/miden-testing/tests/agglayer/: asset_conversion.rs  bridge_in.rs  bridge_out.rs  config_bridge.rs  crypto_utils.rs  faucet_helpers.rs  global_index.rs  leaf_utils.rs  merkle_tree_frontier.rs  mmr_frontier.rs  mod.rs  solidity_miden_address_conversion.rs  test_utils.rs  update_ger.rs
crates/miden-testing/tests/auth/: guarded_multisig.rs  hybrid_multisig.rs  mod.rs  multisig.rs  multisig_psm.rs  network_account.rs  singlesig.rs  singlesig_acl.rs
crates/miden-testing/tests/scripts/: faucet.rs  fee.rs  mod.rs  ownable2step.rs  p2id.rs  p2ide.rs  pswap.rs  rbac.rs  send_note.rs  swap.rs
crates/miden-tx/: Cargo.toml  README.md
crates/miden-tx-batch-prover/: Cargo.toml
crates/miden-tx/src/: lib.rs
(+279 files in other folders)
