[workspace]
members = [
  "bin/bench-note-checker",
  "bin/bench-transaction",
  "crates/miden-agglayer",
  "crates/miden-block-prover",
  "crates/miden-protocol",
  "crates/miden-protocol-macros",
  "crates/miden-standards",
  "crates/miden-testing",
  "crates/miden-tx",
  "crates/miden-tx-batch-prover",
]
resolver = "3"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
repository   = "https://github.com/0xMiden/protocol"
rust-version = "1.90"
version      = "0.14.0-alpha.1"

[profile.release]
codegen-units = 1
lto           = true

[profile.test-dev]
inherits  = "dev"
opt-level = 1

# Avoid running the expensive debug assertion in winter-prover
# https://github.com/facebook/winterfell/blob/cd32dce2fd4986c94516113568eefd938fafe31c/prover/src/lib.rs#L355C1-L356
[profile.test-dev.package.winter-prover]
debug-assertions = false

[profile.bench]
codegen-units = 1
lto           = true

[workspace.dependencies]
# Workspace crates
miden-agglayer        = { default-features = false, path = "crates/miden-agglayer", version = "=0.14.0-alpha.1" }
miden-block-prover    = { default-features = false, path = "crates/miden-block-prover", version = "=0.14.0-alpha.1" }
miden-protocol        = { default-features = false, path = "crates/miden-protocol", version = "=0.14.0-alpha.1" }
miden-protocol-macros = { default-features = false, path = "crates/miden-protocol-macros", version = "=0.14.0-alpha.1" }
miden-standards       = { default-features = false, path = "crates/miden-standards", version = "=0.14.0-alpha.1" }
miden-testing         = { default-features = false, path = "crates/miden-testing", version = "=0.14.0-alpha.1" }
miden-tx              = { default-features = false, path = "crates/miden-tx", version = "=0.14.0-alpha.1" }
miden-tx-batch-prover = { default-features = false, path = "crates/miden-tx-batch-prover", version = "=0.14.0-alpha.1" }

# Miden dependencies
miden-air             = { default-features = false, version = "0.20" }
miden-assembly        = { default-features = false, version = "0.20" }
miden-assembly-syntax = { default-features = false, version = "0.20" }
miden-core            = { default-features = false, version = "0.20" }
miden-core-lib        = { default-features = false, version = "0.20" }
miden-crypto          = { default-features = false, version = "0.19" }
miden-mast-package    = { default-features = false, version = "0.20" }
miden-processor       = { default-features = false, version = "0.20" }
miden-prover          = { default-features = false, version = "0.20" }
miden-utils-sync      = { default-features = false, version = "0.20" }
miden-verifier        = { default-features = false, version = "0.20" }

# External dependencies
anyhow          = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches  = { default-features = false, version = "1.5" }
fs-err          = { default-features = false, version = "3" }
primitive-types = { default-features = false, version = "0.14" }
rand            = { default-features = false, version = "0.9" }
rand_chacha     = { default-features = false, version = "0.9" }
rstest          = { version = "0.26" }
serde           = { default-features = false, version = "1.0" }
thiserror       = { default-features = false, version = "2.0" }
tokio           = { default-features = false, features = ["sync"], version = "1" }
