[workspace]
members = [
  "bin/bench-note-checker",
  "bin/bench-transaction",
  "crates/miden-agglayer",
  "crates/miden-block-prover",
  "crates/miden-protocol",
  "crates/miden-standards",
  "crates/miden-testing",
  "crates/miden-tx",
  "crates/miden-tx-batch-prover",
]
resolver = "3"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
repository   = "https://github.com/0xMiden/protocol"
rust-version = "1.90"
version      = "0.15.0"

[profile.release]
codegen-units = 1
lto           = true

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[profile.bench]
codegen-units = 1
lto           = true

[workspace.dependencies]
# Workspace crates
miden-agglayer        = { default-features = false, path = "crates/miden-agglayer", version = "0.15" }
miden-block-prover    = { default-features = false, path = "crates/miden-block-prover", version = "0.15" }
miden-protocol        = { default-features = false, path = "crates/miden-protocol", version = "0.15" }
miden-standards       = { default-features = false, path = "crates/miden-standards", version = "0.15" }
miden-testing         = { default-features = false, path = "crates/miden-testing", version = "0.15" }
miden-tx              = { default-features = false, path = "crates/miden-tx", version = "0.15" }
miden-tx-batch-prover = { default-features = false, path = "crates/miden-tx-batch-prover", version = "0.15" }

# Miden dependencies
miden-assembly        = { default-features = false, version = "0.22" }
miden-assembly-syntax = { default-features = false, version = "0.22" }
miden-core            = { default-features = false, version = "0.22" }
miden-core-lib        = { default-features = false, version = "0.22" }
miden-crypto          = { default-features = false, version = "0.23" }
miden-crypto-derive   = { default-features = false, version = "0.23" }
miden-mast-package    = { default-features = false, version = "0.22" }
miden-processor       = { default-features = false, version = "0.22" }
miden-prover          = { default-features = false, version = "0.22" }
miden-utils-sync      = { default-features = false, version = "0.22" }
miden-verifier        = { default-features = false, version = "0.22" }

# External dependencies
alloy-sol-types = { default-features = false, version = "1.5" }
anyhow          = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches  = { default-features = false, version = "1.5" }
fs-err          = { default-features = false, version = "3" }
primitive-types = { default-features = false, version = "0.14" }
rand            = { default-features = false, version = "0.9" }
rand_chacha     = { default-features = false, version = "0.9" }
rstest          = { version = "0.26" }
serde           = { default-features = false, version = "1.0" }
thiserror       = { default-features = false, version = "2.0" }
tokio           = { default-features = false, features = ["sync"], version = "1" }
