[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Agglayer components for the Miden protocol"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["agglayer", "miden"]
license.workspace      = true
name                   = "miden-agglayer"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
bench = false

[features]
default = ["std"]
std     = ["miden-assembly/std", "miden-core/std"]
testing = ["miden-protocol/testing"]

[dependencies]
# Miden dependencies
miden-assembly   = { workspace = true }
miden-core       = { workspace = true }
miden-protocol   = { workspace = true }
miden-standards  = { workspace = true }
miden-utils-sync = { workspace = true }

[dev-dependencies]
miden-agglayer = { features = ["testing"], path = "." }

[build-dependencies]
fs-err          = { workspace = true }
miden-assembly  = { workspace = true }
miden-core      = { workspace = true }
miden-core-lib  = { workspace = true }
miden-crypto    = { workspace = true }
miden-protocol  = { features = ["testing"], workspace = true }
miden-standards = { workspace = true }
regex           = { version = "1.11" }
walkdir         = { version = "2.5" }

[package.metadata.cargo-machete]
ignored = ["miden-core-lib", "miden-standards"]
