[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Core components of the Miden protocol"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "protocol"]
license.workspace      = true
name                   = "miden-protocol"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[[bench]]
harness = false
name    = "account_seed"

[lib]
bench = false

[features]
default = ["std"]
std = [
  "dep:serde",
  "dep:toml",
  "miden-assembly/std",
  "miden-core/std",
  "miden-crypto/concurrent",
  "miden-crypto/std",
  "miden-processor/std",
  "miden-verifier/std",
]
testing = ["dep:rand_chacha", "dep:rand_xoshiro", "dep:winter-rand-utils", "miden-air/testing", "miden-crypto/std"]

[dependencies]
# Miden dependencies
miden-assembly        = { workspace = true }
miden-assembly-syntax = { workspace = true }
miden-core            = { workspace = true }
miden-core-lib        = { workspace = true }
miden-crypto          = { workspace = true }
miden-mast-package    = { workspace = true }
miden-processor       = { workspace = true }
miden-protocol-macros = { workspace = true }
miden-utils-sync      = { workspace = true }
miden-verifier        = { workspace = true }
winter-rand-utils     = { optional = true, version = "0.13" }

# External dependencies
bech32       = { default-features = false, features = ["alloc"], version = "0.11" }
rand         = { workspace = true }
rand_xoshiro = { default-features = false, optional = true, version = "0.7" }
semver       = { features = ["serde"], version = "1.0" }
serde        = { features = ["derive"], optional = true, workspace = true }
thiserror    = { workspace = true }
toml         = { optional = true, version = "0.9" }
# for SecretKey generation
rand_chacha = { optional = true, workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { features = ["wasm_js"], version = "0.3" }

[dev-dependencies]
anyhow         = { features = ["backtrace", "std"], workspace = true }
assert_matches = { workspace = true }
criterion      = { default-features = false, features = ["html_reports"], version = "0.5" }
miden-protocol = { features = ["testing"], path = "." }
pprof          = { default-features = false, features = ["criterion", "flamegraph"], version = "0.15" }
rstest         = { workspace = true }
tempfile       = { version = "3.19" }
winter-air     = { version = "0.13" }
# for HashFunction/ExecutionProof::new_dummy
color-eyre = { version = "0.5" }
miden-air  = { features = ["std", "testing"], workspace = true }

[build-dependencies]
fs-err         = { workspace = true }
miden-assembly = { workspace = true }
miden-core     = { workspace = true }
miden-core-lib = { workspace = true }
regex          = { version = "1.11" }
walkdir        = { version = "2.5" }
