[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden protocol testing tools"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "mock", "test"]
license.workspace      = true
name                   = "miden-testing"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[features]
std = ["miden-protocol/std", "miden-standards/std", "miden-tx/std"]

[dependencies]
# Workspace dependencies
miden-agglayer        = { features = ["testing"], workspace = true }
miden-block-prover    = { features = ["testing"], workspace = true }
miden-protocol        = { features = ["testing"], workspace = true }
miden-standards       = { features = ["testing"], workspace = true }
miden-tx              = { features = ["testing"], workspace = true }
miden-tx-batch-prover = { features = ["testing"], workspace = true }

# Miden dependencies
miden-assembly  = { workspace = true }
miden-core-lib  = { workspace = true }
miden-crypto    = { workspace = true }
miden-processor = { workspace = true }

# External dependencies
anyhow      = { workspace = true }
itertools   = { default-features = false, features = ["use_alloc"], version = "0.14" }
rand        = { features = ["os_rng", "small_rng"], workspace = true }
rand_chacha = { workspace = true }
thiserror   = { workspace = true }
winterfell  = { version = "0.13" }

[dev-dependencies]
anyhow            = { features = ["backtrace", "std"], workspace = true }
assert_matches    = { workspace = true }
hex               = { version = "0.4" }
miden-crypto      = { workspace = true }
miden-protocol    = { features = ["std"], workspace = true }
primitive-types   = { workspace = true }
rstest            = { workspace = true }
serde             = { features = ["derive"], workspace = true }
serde_json        = { version = "1.0" }
tokio             = { features = ["macros", "rt"], workspace = true }
winter-rand-utils = { version = "0.13" }
