[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden blockchain transaction batch executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["batch", "miden", "prover"]
license.workspace      = true
name                   = "miden-tx-batch-prover"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
bench   = false
doctest = false

[features]
default = ["std"]
std     = ["miden-protocol/std", "miden-tx/std"]
testing = []

[dependencies]
miden-protocol = { workspace = true }
miden-tx       = { workspace = true }
