[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden blockchain transaction executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "transaction"]
license.workspace      = true
name                   = "miden-tx"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
doctest = false

[features]
concurrent = ["miden-prover/concurrent", "std"]
default = ["std"]
std = [
  "concurrent",
  "miden-processor/std",
  "miden-protocol/std",
  "miden-prover/std",
  "miden-standards/std",
  "miden-verifier/std",
]
testing = ["miden-processor/testing", "miden-protocol/testing", "miden-standards/testing"]

[dependencies]
# Workspace dependencies
miden-protocol  = { workspace = true }
miden-standards = { workspace = true }

# Miden dependencies
miden-processor = { workspace = true }
miden-prover    = { workspace = true }
miden-verifier  = { workspace = true }

# External dependencies
thiserror = { workspace = true }

[dev-dependencies]
miden-protocol = { features = ["testing"], workspace = true }
rand_chacha    = { workspace = true }
